# solid

./: Makefile  README.md  pyproject.toml  setup.py
config/: config_Aeva.yaml  config_Avia.yaml  config_Ouster.yaml
solid/: __init__.py  pipeline.py
solid/config/: __init__.py  parser.py
solid/core/: point_module.py  solid.py
solid/datasets/: __init__.py  apollo.py  digiforest.py  helipr.py  mulran.py  ncd.py  nclt.py
solid/tools/: cmd.py  pipeline_results.py  progress_bar.py
